0.3.0 [Unreleased]
-----
- Changed REAB (Regular Expression Automata Builder) term in previous CHANGELOG
  version to simply "regular expression automata" and also rename reab.gv to
  rea.gv in docs
- Moved headers in include folder to libsapling subfolder for installation
  purposes
- Added Linux/Unix installation recipe in Makefile
- Updated README


0.2.0
-----
- Added CHANGELOG
- Implemented string escaping/unescaping text utilities
- Implemented regular expression automata
- Implemented regular expression automata tests with graph visualization
- Updated library implementation dependency chart
- Added regular expression automata implementation dependency chart
- Moved dependency charts to docs folder
- Updated README


0.1.1
-----
- Fixed typo in README


0.1.0
-----
- Implemented the following graph based collections: path, stack, queue,
  AVL tree and trie
- Implemented tests with graph visualization